# niff-Stellar-shurance

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  load-tests.yml  postgres-backup.yml  recovery-drill.yml  storybook.yml  wasm-release.yml
backend/: .env.example  eslint.config.mjs  package-lock.json  package.json
backend/docs/: tenant-isolation.md
backend/prisma/: schema.prisma
backend/src/: app.module.ts  index.ts
backend/src/admin/: admin.controller.spec.ts  admin.controller.ts  admin.module.ts
backend/src/claims/: claims.service.ts
backend/src/config/: env.validation.ts
backend/src/graphql/: claim.resolver.ts  policy.resolver.ts
backend/src/horizon/: horizon-rate-limit.service.ts
backend/src/indexer/: indexer.module.ts  indexer.service.ts
backend/src/maintenance/: maintenance.module.ts  solvency-monitoring.service.ts
backend/src/metrics/: metrics.service.ts
backend/src/notifications/: notification-preferences.repository.ts  notifications.controller.ts  notifications.service.ts
backend/src/rpc/: soroban.service.ts
backend/test/: notifications.test.js
contracts/niffyinsure/: Cargo.toml
contracts/niffyinsure/docs/: COVERAGE_TIER_ENUM_VERIFICATION.md  SECURITY.md
contracts/premium_calculator/: Cargo.toml
docs/: dependency-update-process.md
docs/ops/: disaster-recovery-runbook.md  maintenance-runbook.md
frontend/: README.md  jest.config.js  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  (+1 more)
frontend/tests/: accessibility.spec.ts
(+66 files in other folders)
