[package]
name = "premium_calculator"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "=25.3.1", features = [] }

[dev-dependencies]
soroban-sdk = { version = "=25.3.1", features = ["testutils"] }
